SEO: resolve 'legible font sizes' warning on mobile devices by increasing fonts below 12px to 12px

--- a/src/components/Header/HeaderButtons/BoardSelector/BoardSelector.module.scss
+++ b/src/components/Header/HeaderButtons/BoardSelector/BoardSelector.module.scss
@@ -15,7 +15,7 @@
   color: rgba(255, 255, 255, 0.7);
   border-radius: 6px;
   cursor: pointer;
-  font-size: 11px;
+  font-size: .75rem;
   font-weight: 500;
   border: 1px solid transparent;
   transition:
