--- a/src/components/Header/Logo/Logo.module.scss
+++ b/src/components/Header/Logo/Logo.module.scss
@@ -29,12 +29,12 @@
 }
 
 .logo .logoText {
-  font-size: 14px;
+  font-size: .875rem;
   font-weight: 500;
   color: rgba(255, 255, 255, 0.9);
 }
 
 .logo .logoText>span {
-  font-size: 11px;
+  font-size: .75rem;
   opacity: 0.7;
 }
