--- a/src/components/Shared/Button/Button.module.scss
+++ b/src/components/Shared/Button/Button.module.scss
@@ -6,7 +6,7 @@
   color: rgba(255, 255, 255, 0.8);
   padding: 8px 16px;
   border-radius: 8px;
-  font-size: 12px;
+  font-size: .75rem;
   cursor: pointer;
   transition: background .2s ease, border-color .2s ease;
 
