--- a/src/components/XOGame/PowerUps/PowerUpButton/PowerUpButton.module.scss
+++ b/src/components/XOGame/PowerUps/PowerUpButton/PowerUpButton.module.scss
@@ -80,7 +80,7 @@
 }
 
 .powerUp .powerName {
-  font-size: .6rem;
+  font-size: .75rem;
   font-weight: 500;
   text-align: center;
 }
@@ -97,7 +97,7 @@
   display: none;
   align-items: center;
   justify-content: center;
-  font-size: 10px;
+  font-size: .75rem;
   font-weight: bold;
 }
 
