--- a/src/components/XOGame/XOBoard/WinnerPopUp/WinnerPopUp.module.scss
+++ b/src/components/XOGame/XOBoard/WinnerPopUp/WinnerPopUp.module.scss
@@ -8,7 +8,7 @@
   border-radius: 20px;
   text-align: center;
   text-wrap: nowrap;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: bold;
   border: 2px solid #4ecdc4;
   backdrop-filter: blur(20px);
